--- a/DogServices.html
+++ b/DogServices.html
@@ -26,6 +26,12 @@
 
 <img src="DogServices.jpg" alt="DogServices">	
 <br>
+<h1 align="center">Strothertowne Pet Hospital</h1>
+<div class="Review1">
+AFter my dog's (Casey) hip was dislocated from jumping off a tall table in the back porch I landed into the hands
+of Strothertowne Pet Hospital. Dr. Jones and his staff took can of Casey making sure she had what she needed to recover. The amount of
+help and support. Casey was able to have her surgury and is now alive up and running thanks to Strothertowne Pet Hospital.
+</div>
 	
 <br>
 
