--- a/DogServices.html
+++ b/DogServices.html
@@ -31,6 +31,7 @@
 AFter my dog's (Casey) hip was dislocated from jumping off a tall table in the back porch I landed into the hands
 of Strothertowne Pet Hospital. Dr. Jones and his staff took can of Casey making sure she had what she needed to recover. The amount of
 help and support. Casey was able to have her surgury and is now alive up and running thanks to Strothertowne Pet Hospital.
+	Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum.
 </div>
 	
 <br>
