--- a/DogServices.html
+++ b/DogServices.html
@@ -32,7 +32,7 @@ AFter my dog's (Casey) hip was dislocated from jumping off a tall table in the b
 of Strothertowne Pet Hospital. Dr. Jones and his staff took can of Casey making sure she had what she needed to recover. The amount of
 help and support. Casey was able to have her surgury and is now alive up and running thanks to Strothertowne Pet Hospital.
 </p>
-<img style="float: Left; margin-right: 5px; margin-left: 5px" alt="Strothertowne_Pet_Hospital" title="" src="Strothertowne_Pet_Hospital.jpg" height="300" width="350"/>
+<img style="float: Left; margin-right: 5px; margin-left: 5px" alt="Strothertowne_Pet_Hospital" title="" src="Strothertowne_Pet_Hospital.jpg">
 
 <br>
 
