--- a/DogServices.html
+++ b/DogServices.html
@@ -22,18 +22,16 @@
     </ul>
 </div> 
 	
-<h1 align="center">Dog Services</h1>
-
-<img src="DogServices.jpg" alt="DogServices">	
+<h1 align="center">Dog Services</h1>	
 <br>
 <h1 align="center">Strothertowne Pet Hospital</h1>
-<p>
-AFter my dog's (Casey) hip was dislocated from jumping off a tall table in the back porch I landed into the hands
-of Strothertowne Pet Hospital. Dr. Jones and his staff took can of Casey making sure she had what she needed to recover. The amount of
-help and support. Casey was able to have her surgury and is now alive up and running thanks to Strothertowne Pet Hospital.
+	<img src="Strothertowne_Pet_Hospital.jpg" alt="Strothertowne_Pet_Hospital">
+<p align="center">
+Review: After my dog's (Casey) hip was dislocated from jumping off a tall table in the back porch I landed into the hands <br>
+of Strothertowne Pet Hospital. Dr. Jones and his staff took can of Casey making sure she had what she needed to recover. The amount of <br>
+help and support. Casey was able to have her surgury and is now alive up and running thanks to Strothertowne Pet Hospital.<br>
+To view more reviews on this Pet Hospital please <a href="https://www.google.com/webhp?sourceid=chrome-instant&ion=1&espv=2&ie=UTF-8#q=Strothertowne+Pet+Hospital&lrd=0x87c12032ba7e04a5:0xbf5b3200eea0ce5b,1,">click Here</a>
 </p>
-<img style="float: Left; margin-right: 5px; margin-left: 5px" alt="Strothertowne_Pet_Hospital" title="" src="Strothertowne_Pet_Hospital.jpg">
-
 <br>
 
 <p align="center">
