--- a/DogServices.html
+++ b/DogServices.html
@@ -30,10 +30,18 @@
 Review: After my dog's (Casey) hip was dislocated from jumping off a tall table in the back porch I landed into the hands <br>
 of Strothertowne Pet Hospital. Dr. Jones and his staff took can of Casey making sure she had what she needed to recover. The amount of <br>
 help and support. Casey was able to have her surgury and is now alive up and running thanks to Strothertowne Pet Hospital.<br>
-To view more reviews on this Pet Hospital please <a href="https://www.google.com/webhp?sourceid=chrome-instant&ion=1&espv=2&ie=UTF-8#q=Strothertowne+Pet+Hospital&lrd=0x87c12032ba7e04a5:0xbf5b3200eea0ce5b,1,">click Here</a>
+To view more reviews on this Pet Hospital please <a href="https://www.google.com/webhp?sourceid=chrome-instant&ion=1&espv=2&ie=UTF-8#q=Strothertowne+Pet+Hospital&lrd=0x87c12032ba7e04a5:0xbf5b3200eea0ce5b,1," target="">click here.</a>
 </p>
 <br>
-
+<h1 align="center">Belton PetSmart Grooming Service</h1>
+	<img src="Belton_Pets_Smart.jpg" alt="Belton_Pets_Smart">
+<p align="center">
+Review: I personally always take Casey to Belton's PetSmart location because first it is a very short commute from my home.<br>
+secondly, since I bring casey in on daily basis they have created a friend bond with her and even recognize her once we walk in.<br>
+Last but not least I really love this establishment because when I go pick up my baby, I recieve a report about her behavior during <br>
+the treatments. I know how good she behaved and personal notes on what they recommend for an upcoming appointment.<br>
+To view more reviews on this Belton's PetSmart please <a href="https://www.google.com/webhp?sourceid=chrome-instant&ion=1&espv=2&ie=UTF-8#q=belton+petsmart&lrd=0x87c0db86cef81781:0xcc23bfe3d304398a,1," target="">click here.</a>
+</p>
 <p align="center">
 	<br>For any questions, comments, and/or concerns on this site please feel free to contact Harold Burgos via
 	<a href="mailto:haroldjburgos@gmail.com?
