--- a/DogServices.html
+++ b/DogServices.html
@@ -42,6 +42,17 @@ Last but not least I really love this establishment because when I go pick up my
 the treatments. I know how good she behaved and personal notes on what they recommend for an upcoming appointment.<br>
 To view more reviews on this Belton's PetSmart please <a href="https://www.google.com/webhp?sourceid=chrome-instant&ion=1&espv=2&ie=UTF-8#q=belton+petsmart&lrd=0x87c0db86cef81781:0xcc23bfe3d304398a,1," target="">click here.</a>
 </p>
+<br>
+<h1 align="center">Wayside Waifs Bark Park</h1>
+	<img src="Bark_Park.jpg" alt="Bark_Park">
+<p align="center">
+I have not gone to this park yet, but based on my friend's recommendation he said he was very impressed by how big the dog park was<br>
+I've been researching about the dog park and even ran into a youtube video on a 360 view about the establishment. I will soon <br>
+give my full personal review, but for now please enjoy the references below.<br>
+To view more information on this Dog Park please <a href="http://www.waysidewaifs.org/site/PageServer?pagename=Bark_park_new" target="">click here.</a><br>
+ <a href="https://www.youtube.com/embed/JxXnKoYdUX8" target="">360 tour</a>
+	</p>
+	
 <p align="center">
 	<br>For any questions, comments, and/or concerns on this site please feel free to contact Harold Burgos via
 	<a href="mailto:haroldjburgos@gmail.com?
