--- a/AmIReady.html
+++ b/AmIReady.html
@@ -70,7 +70,7 @@
 
 <p align="center">Sure, it's a long list of questions. But taking a quick stroll through an animal
 	shelter will help you understand why answering them before you adopt is so important. <br>
-	Many of the Midlands homeless pets are puppies and kittens, victims of irresponsible people <br>
+	Many of the Kansas City homeless pets are puppies and kittens, victims of irresponsible people <br>
 	who allowed their pets to breed. But there are at least as many dogs and cats at the shelter<br>
 	who are more than a year old-animals who were obtained by people who didn't think through the <br>
 	responsibilities of pet ownership before they got the animal. Please, don't make the same mistake.<br>
