--- a/TipsAndTricks.html
+++ b/TipsAndTricks.html
@@ -3,15 +3,15 @@
 <html lang="en">
 
 <head>
-	<link rel="stylesheet" type="text/css" href="TipsAndTricks.css">
-	<title>Tips And Tricks</title>
+	<link rel="stylesheet" type="text/css" href="ContactUs.css">
+	<title>Dogs And Puppies</title>
 	
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
 
 <body>
-<h1 align="center">Tips And Tricks</h1>
+<h1 align="center">Contact Us</h1>
 
 
 
