--- a/FAQs.html
+++ b/FAQs.html
@@ -24,13 +24,17 @@
 </div> 
 
 	
-<h1 align="center">FAQs</h1>
-
-
+<h1 align="center">Top 5 FAQs</h1>
 <br>
-
-<h1 align="center">Coming Soon</h1>
+ <h2 align="center">How do I know If I am Ready </h2>
+   <p align="center">If you are able to comrehend and answer the majority of the questions on the "Am I ready" link above. <br>
+	Then you will soon know if you are ready or not.</p> 
 <br>
+<h2 align="center"> Where can I start looking </h2>
+	<p align="center">I would personally start by looking into KC metro Areas around you. for example, did you know <br>
+	KC Pet Project is an organization in KC meant to help Animal get adopted and also saving lives.<br>
+	visit their website to learn more about <a href="https://kcpetproject.org/">KC Pet Project</a> If this doesn't work then researching<br>
+	Adoptable pets on WestSide Waifs and even dog shelters should give you a list to start with.</p> 
 <p align="center">
 	<br>For any questions, comments, and/or concerns on this site please feel free to contact Harold Burgos via
 	<a href="mailto:haroldjburgos@gmail.com?
