--- a/FAQs.html
+++ b/FAQs.html
@@ -26,11 +26,11 @@
 	
 <h1 align="center">Top 5 FAQs</h1>
 <br>
- <h2 align="center">How do I know If I am Ready?</h2>
+ <h2 align="center">Where can I get my dog vaccininated?</h2>
    <p align="center">If you are able to answer the majority of the questions on the "Am I ready" link above. <br>
 	Then you will soon know if you are ready or not.</p> 
 <br>
-<h2 align="center"> Where can I start looking?</h2>
+<h2 align="center">When should I start potty training?</h2>
 	<p align="center">I would personally start by looking into KC metro Areas around you. for example, did you know <br>
 	KC Pet Project nonprofit charitable organization operating the Kansas City, Missouri Animal Shelter. <br>
 	visit their website to learn more about <a href="https://kcpetproject.org/">KC Pet Project</a> If this doesn't work then researching<br>
@@ -39,6 +39,15 @@
    <p align="center">Most organizations have an online webpage where you can donate or <br>
 	You can also visit them and give them a personal donation as well!<br>
 	</p> 
+<h2 align="center">What type of food should I give my dog?</h2>
+   <p align="center">If you are able to answer the majority of the questions on the "Am I ready" link above. <br>
+	Then you will soon know if you are ready or not.</p>
+<h2 align="center">How much interaction does my dog need?</h2>
+   <p align="center">If you are able to answer the majority of the questions on the "Am I ready" link above. <br>
+	Then you will soon know if you are ready or not.</p> 
+<h2 align="center"></h2>
+   <p align="center">If you are able to answer the majority of the questions on the "Am I ready" link above. <br>
+	Then you will soon know if you are ready or not.</p>
 <p align="center">
 	<br>For any questions, comments, and/or concerns on this site please feel free to contact Harold Burgos via
 	<a href="mailto:haroldjburgos@gmail.com?
