--- a/FAQs.html
+++ b/FAQs.html
@@ -27,13 +27,13 @@
 <h1 align="center">Top 5 FAQs</h1>
 <br>
 <h2 align="center">Where can I get my dog vaccininated?</h2>
-	<p>You could go to any vet clinic or animal hospitals to get your dogs vacciniated ,but <br>
+	<p align="center">You could go to any vet clinic or animal hospitals to get your dogs vacciniated ,but <br>
 		convientely Kansas City's Spay and Nuetr provide the same vaccines with cheaper packages<br>
 	and friendly staff.</p>
     
 <br>
 <h2 align="center">When should I start potty training?</h2>
-	<p>With Puppies, start taking them out first thing in the morning. After that take them out every 30 minutes to one hour. <br>
+	<p align="center">With Puppies, start taking them out first thing in the morning. After that take them out every 30 minutes to one hour. <br>
 		Since puppies do not have much control over their blatter make sure to begin and schedule and always keep a look out for messes<br>
 		It would also be best practices to put them down at the same spot when taking out to go do thier business.<br>
 		For older dogs having a constant schedule would help build them build a scheduled bladder so that when you come home, you can <br>
@@ -41,7 +41,7 @@
 
 <br>   
 <h2 align="center">What type of food should I give my dog?</h2>
-	<p>The most popular brand of food for puppies would be puppy chow. I would try by choosing one type of your choice <br>
+	<p align="center">The most popular brand of food for puppies would be puppy chow. I would try by choosing one type of your choice <br>
 		and see how your puppy reacts if he or she does not like it then try another brand. It might take a few tries <br>
 		Before you find the right one.<br>
 		For older dogs I would recommend Dog Chow: Light and Healthy, to maintain a healthy weight and happy dog. <br>
@@ -50,14 +50,14 @@
 		transitioning food types, try having a slow transition over time before completely serving a new brand.</p>
 <br>	
 <h2 align="center">How much interaction does my dog need?</h2>
- 	<p> This depends on the type and also age of the dog. For younger puppies they are a fur ball of energy and need constant <br>
+ 	<p align="center">This depends on the type and also age of the dog. For younger puppies they are a fur ball of energy and need constant <br>
 		attention and interaction. As dogs get older they can either maintain the same energy or drop a few levels.<br>
 		It is very important that whatever type of dog you are making sure it is getting its nessesary exercise.<br>
 		This will decrease their energy to rest for the next day and reduce thier anxiety to run around the house trying to <br>
 		burn some energy.
 <br>	
 <h2 align="center">Should I adopt or purchase from a breeder?</h2>
-	<p>The Prefered method would be adoption. Most dogs at shelters are in line ready to be put down because not thier being adopted<br>
+	<p align="center">The Prefered method would be adoption. Most dogs at shelters are in line ready to be put down because not thier being adopted<br>
 	in time. Due to an over population is dogs it would be both cost effiecent and helpful to adopt a dog from a local shelter<br>
 	Most dogs come from a bad home and need a second chance to demostrate that they too can be loved.</p>
 	
