--- a/MyStory.html
+++ b/MyStory.html
@@ -25,16 +25,35 @@
 
 	
 <h1 align="center">My Story</h1>
-
-
 <br>
-
-<h1 align="center">Coming Soon</h1>
+Hello, <br>
+	
+	This is Casey. My adventure with her began a day coming back from school. I noticed there was a poster with <br>
+	the words "Free Puppies." written in marker. After getting back home something inside of me said 'go back and <br>
+	See what the puppies looked like.' As I drove there I knew I was in a good position to take a puppy home if I wanted too.<br>
+	It was when I walked to the circled fence that I fell in love with Casey. She was the weird one away from the other puppies,<br>
+	I thought she was unique.
+<img style="float: right; margin-right: 5px; margin-left: 5px" alt="CaseyAsleep" title="" src="IMG_0232.JPG" height="300" width="350">
+	<br> After I brought her home I noticed she liked to wonder, she was curious on what was behind the doors and loved most of all, <br> 
+	getting attention from my family and visitors. Since that day she has been by my side and has brought positivity and many laughs. <br>
+	I knew that she was going to be very energetic and she sure was. I got in the habit of taking her on walks and over the next fews <br>
+	I had very few nights of constant 8 hours of sleep. I am not going to lie I was tired, but with every decision there are always <br>
+	consequences. As she grew older she got to be apart of the family and even got along with my sister's chihuahua. <br>
+	Casey has brought a lot of love into my family, but also a lot of worries. One night after coming back from work I noticed Casey<br>
+	was in the back yard behind our shed. As I called her name she didn't move. She stood there and stared at me. As I walked to her I knew <br>
+	Something was wrong. I noticed she balance on three legs and then also noticed her fourth leg was wobbling in the air. After having a difficult <br>
+	keeping her calm in the car and taking her to the emergency hospital. I could see the tears coming from her eyes. The same night <br>
+	I check my security cameras to find out she had jumped off the tall table in our dock and landed bad. After many failed attempts <br>
+	from trying to put her hip back into place it always came out. 
+	<img style="float: right; margin-right: 5px; margin-left: 5px" alt="CaseyAndI" title="" src="IMG_0245.JPG" height="300" width="350">
+	Dr. Jones recommended to have surgury and so we proceeded. It was very <br>
+	difficult because she needed constant attention at night when she moved and also when she needed to potty. Never in my life did I ever <br>
+	feel so much like in a father's role until that time. Even with the surgery the doctor feared that she could never put pressure on her foot <br>
+	because of all of the muscle she had lost during the time of the accident till the surguery. Finally Casey was a fighter and after 3 months <br>
+	she began to walk and adding a little more pressure and confidenced to her leg. Its been a year since her recovery and she runs and plays like <br>
+	a normal dog now. I am thankful things went well. I could not imagine the pain and siffering she must of went through. I learned that in life <br>
+	there are many ups and downs, but you always get through them day by day. <br>
 <br>
-
-<br>
-<h1 align="center">Thanks for Visiting</h1>
-
 <p align="center">
 	<br>For any questions, comments, and/or concerns on this site please feel free to contact Harold Burgos via
 	<a href="mailto:haroldjburgos@gmail.com?
