--- a/MyStory.html
+++ b/MyStory.html
@@ -53,6 +53,8 @@ Hello, <br>
 	she began to walk and adding a little more pressure and confidenced to her leg. Its been a year since her recovery and she runs and plays like <br>
 	a normal dog now. I am thankful things went well. I could not imagine the pain and siffering she must of went through. I learned that in life <br>
 	there are many ups and downs, but you always get through them day by day. <br>
+	Dogs are a man's bestfriend and without them the world would feel a little more emptier. Therefore I say give your dog a kiss, a hug, or even a treat <br>
+	because they bring so much love and energy to our routine lives.
 <br>
 <p align="center">
 	<br>For any questions, comments, and/or concerns on this site please feel free to contact Harold Burgos via
