--- a/MyStory.html
+++ b/MyStory.html
@@ -25,7 +25,7 @@
 
 	
 <h1 align="center">My Story</h1>
-<br>
+<br><p align="center">
 Hello, <br>
 	
 	This is Casey. My adventure with her began a day coming back from school. I noticed there was a poster with <br>
@@ -45,7 +45,7 @@ Hello, <br>
 	keeping her calm in the car and taking her to the emergency hospital. I could see the tears coming from her eyes. The same night <br>
 	I check my security cameras to find out she had jumped off the tall table in our dock and landed bad. After many failed attempts <br>
 	from trying to put her hip back into place it always came out. 
-	<img style="float: right; margin-right: 5px; margin-left: 5px" alt="CaseyAndI" title="" src="IMG_0245.JPG" height="300" width="350">
+	<img style="float: left; margin-right: 5px; margin-left: 5px" alt="CaseyAndI" title="" src="IMG_0245.JPG" height="300" width="350">
 	Dr. Jones recommended to have surgury and so we proceeded. It was very <br>
 	difficult because she needed constant attention at night when she moved and also when she needed to potty. Never in my life did I ever <br>
 	feel so much like in a father's role until that time. Even with the surgery the doctor feared that she could never put pressure on her foot <br>
@@ -54,7 +54,7 @@ Hello, <br>
 	a normal dog now. I am thankful things went well. I could not imagine the pain and siffering she must of went through. I learned that in life <br>
 	there are many ups and downs, but you always get through them day by day. <br>
 	Dogs are a man's bestfriend and without them the world would feel a little more emptier. Therefore I say give your dog a kiss, a hug, or even a treat <br>
-	because they bring so much love and energy to our routine lives.
+	because they bring so much love and energy to our routine lives.<p>
 <br>
 <p align="center">
 	<br>For any questions, comments, and/or concerns on this site please feel free to contact Harold Burgos via
