--- a/MyStory.html
+++ b/MyStory.html
@@ -44,7 +44,7 @@
 	keeping her calm in the car and taking her to the emergency hospital. I could see the tears coming from her eyes. The same night <br>
 	I check my security cameras to find out she had jumped off the tall table in our dock and landed bad. After many failed attempts <br>
 	from trying to put her hip back into place it always came out. 
-	<img style="float: left; margin-right: 5px; margin-left: 5px" alt="CaseyAndI" title="" src="IMG_0245.JPG">
+	<img style="float: left; margin-right: 5px; margin-left: 5px" alt="CaseyBed" title="" src="IMG_0242.JPG">
 	Dr. Jones recommended to have surgury and so we proceeded. It was very <br>
 	difficult because she needed constant attention at night when she moved and also when she needed to potty. Never in my life did I ever <br>
 	feel so much like in a father's role until that time. Even with the surgery the doctor feared that she could never put pressure on her foot <br>
