--- a/MyStory.html
+++ b/MyStory.html
@@ -26,7 +26,7 @@
 	
 <h1 align="center">My Story</h1>
 <br>
-<img src="IMG_0245.JPG" alt="CaseyAndI">
+<img src="IMG_0245.JPG" alt="CaseyAndI" height="300" width="300">
 <br><p align="center">
 	This is Casey. My adventure with her began a day coming back from school. I noticed there was a poster with <br>
 	the words "Free Puppies." written in marker. After getting back home something inside of me said 'go back and <br>
