--- a/MyStory.html
+++ b/MyStory.html
@@ -32,7 +32,7 @@
 	the words "Free Puppies." written in marker. After getting back home something inside of me said 'go back and <br>
 	See what the puppies looked like.' As I drove there I knew I was in a good position to take a puppy home if I wanted too.<br>
 	It was when I walked to the circled fence that I fell in love with Casey. She was the weird one away from the other puppies,I thought she was unique.
-<img style="float: right; margin-right: 5px; margin-left: 5px" alt="CaseyAsleep" title="" src="IMG_0232.JPG">
+<img style="float: right; margin-right: 5px; margin-left: 5px" alt="CaseyAsleep" title="" src="IMG_0232.JPG" height="300" width="300">
 	<br> After I brought her home I noticed she liked to wonder, she was curious on what was behind the doors and loved most of all, <br> 
 	getting attention from my family and visitors. Since that day she has been by my side and has brought positivity and many laughs. <br>
 	I knew that she was going to be very energetic and she sure was. I got in the habit of taking her on walks and over the next fews <br>
@@ -44,7 +44,7 @@
 	keeping her calm in the car and taking her to the emergency hospital. I could see the tears coming from her eyes. The same night <br>
 	I check my security cameras to find out she had jumped off the tall table in our dock and landed bad. After many failed attempts <br>
 	from trying to put her hip back into place it always came out. 
-	<img style="float: left; margin-right: 5px; margin-left: 5px" alt="CaseyBed" title="" src="IMG_0242.JPG">
+	<img style="float: left; margin-right: 5px; margin-left: 5px" alt="CaseyBed" title="" src="IMG_0242.JPG" height="300" width="300">
 	Dr. Jones recommended to have surgury and so we proceeded. It was very <br>
 	difficult because she needed constant attention at night when she moved and also when she needed to potty. Never in my life did I ever <br>
 	feel so much like in a father's role until that time. Even with the surgery the doctor feared that she could never put pressure on her foot <br>
