--- a/MyStory.html
+++ b/MyStory.html
@@ -26,8 +26,9 @@
 	
 <h1 align="center">My Story</h1>
 <br>
-<img src="IMG_0245.JPG" alt="CaseyAndI" height="300" width="300">
-This is Casey. My adventure with her began a day coming back from school. I noticed there was a poster with  
+<img src="IMG_0245.JPG" alt="CaseyAndI" height="300" width="300"> <br>
+	
+<div>This is Casey. My adventure with her began a day coming back from school. I noticed there was a poster with  
 	the words "Free Puppies." written in marker. After getting back home something inside of me said 'go back and  
 	See what the puppies looked like.' As I drove there I knew I was in a good position to take a puppy home if I wanted too. 
 	It was when I walked to the circled fence that I fell in love with Casey. She was the weird one away from the other puppies,I thought she was unique.
@@ -43,7 +44,7 @@ This is Casey. My adventure with her began a day coming back from school. I noti
 	keeping her calm in the car and taking her to the emergency hospital. I could see the tears coming from her eyes. The same night  
 	I check my security cameras to find out she had jumped off the tall table in our dock and landed bad. After many failed attempts  
 	from trying to put her hip back into place it always came out. 
-	<img style="float: left; margin-right: 5px; margin-left: 5px" alt="CaseyBed" title="" src="IMG_0260.JPG" height="300" width="300">
+<img style="float: left; margin-right: 5px; margin-left: 5px" alt="CaseyBed" title="" src="IMG_0260.JPG" height="300" width="300">
 	Dr. Jones recommended to have surgury and so we proceeded. It was very  
 	difficult because she needed constant attention at night when she moved and also when she needed to potty. Never in my life did I ever  
 	feel so much like in a father's role until that time. Even with the surgery the doctor feared that she could never put pressure on her foot  
@@ -52,7 +53,7 @@ This is Casey. My adventure with her began a day coming back from school. I noti
 	a normal dog now. I am thankful things went well. I could not imagine the pain and siffering she must of went through. I learned that in life  
 	there are many ups and downs, but you always get through them day by day.  
 	Dogs are a man's bestfriend and without them the world would feel a little more emptier. Therefore I say give your dog a kiss, a hug, or even a treat  
-	because they bring so much love and energy to our routine lives.<p>
+	because they bring so much love and energy to our routine lives.</div>
 
 <br>
 <p align="center">
