--- a/MyStory.html
+++ b/MyStory.html
@@ -27,26 +27,26 @@
 <h1 align="center">My Story</h1>
 <br>
 <img style="float: left; margin-right: 5px; margin-left: 5px" alt="CaseyBed" title="" src="IMG_0245.JPG" height="300" width="300">
-	
+<br>
 <div class=Story>This is Casey. My adventure with her began a day coming back from school. I noticed there was a poster with  
 	the words "Free Puppies." written in marker. After getting back home something inside of me said 'go back and  
 	See what the puppies looked like.' As I drove there I knew I was in a good position to take a puppy home if I wanted too. 
 	It was when I walked to the circled fence that I fell in love with Casey. She was the weird one away from the other puppies,I thought she was unique.</div>
-<img style="float: right; margin-right: 5px; margin-left: 5px" alt="CaseyAsleep" title="" src="IMG_0232.JPG" height="300" width="300">
-	 <div class=Story> After I brought her home I noticed she liked to wonder, she was curious on what was behind the doors and loved most of all,   
+<br><img style="float: right; margin-right: 5px; margin-left: 5px" alt="CaseyAsleep" title="" src="IMG_0232.JPG" height="300" width="300">
+	 <div> After I brought her home I noticed she liked to wonder, she was curious on what was behind the doors and loved most of all,   
 	getting attention from my family and visitors. Since that day she has been by my side and has brought positivity and many laughs.  
 	I knew that she was going to be very energetic and she sure was. I got in the habit of taking her on walks and over the next fews  
 	I had very few nights of constant 8 hours of sleep. I am not going to lie I was tired, but with every decision there are always  
 	consequences. As she grew older she got to be apart of the family and even got along with my sister's chihuahua. </div>
 	<img style="float: left; margin-right: 5px; margin-left: 5px" alt="CaseyBed" title="" src="IMG_0260.JPG" height="300" width="300">
-	<div class=Story>Casey has brought a lot of love into my family, but also a lot of worries. One night after coming back from work I noticed Casey 
+	<div>Casey has brought a lot of love into my family, but also a lot of worries. One night after coming back from work I noticed Casey 
 	was in the back yard behind our shed. As I called her name she didn't move. She stood there and stared at me. As I walked to her I knew  
 	Something was wrong. I noticed she balance on three legs and then also noticed her fourth leg was wobbling in the air. After having a difficult  
 	keeping her calm in the car and taking her to the emergency hospital. I could see the tears coming from her eyes. The same night  
 	I check my security cameras to find out she had jumped off the tall table in our dock and landed bad. After many failed attempts  
 	from trying to put her hip back into place it always came out. </div>
 <img style="float: left; margin-right: 5px; margin-left: 5px" alt="CaseyBed" title="" src="IMG_0260.JPG" height="300" width="300">
-	<div class=Story>Dr. Jones recommended to have surgury and so we proceeded. It was very  
+	<div>Dr. Jones recommended to have surgury and so we proceeded. It was very  
 	difficult because she needed constant attention at night when she moved and also when she needed to potty. Never in my life did I ever  
 	feel so much like in a father's role until that time. Even with the surgery the doctor feared that she could never put pressure on her foot  
 	because of all of the muscle she had lost during the time of the accident till the surguery. Finally Casey was a fighter and after 3 months  
