--- a/MyStory.html
+++ b/MyStory.html
@@ -26,10 +26,10 @@
 	
 <h1 align="center">My Story</h1>
 <br>
-<img style="float: left; margin-right: 5px; margin-left: 5px" alt="CaseyBed" title="" src="IMG_0245.JPG" height="300" width="300">
-	<img style="float: left; margin-right: 5px; margin-left: 5px" alt="CaseyBed" title="" src="IMG_0260.JPG" height="300" width="300">
-	<br><img style="float: right; margin-right: 5px; margin-left: 5px" alt="CaseyAsleep" title="" src="IMG_0232.JPG" height="300" width="300">
-	<img style="float: left; margin-right: 5px; margin-left: 5px" alt="CaseyBed" title="" src="IMG_0260.JPG" height="300" width="300">
+<img style="float: left; margin-right: 5px; margin-left: 5px" alt="" title="" src="IMG_0245.JPG" height="300" width="300">
+<img style="float: left; margin-right: 5px; margin-left: 5px" alt="" title="" src="IMG_0260.JPG" height="300" width="300">
+<img style="float: left; margin-right: 5px; margin-left: 5px" alt="" title="" src="IMG_0232.JPG" height="300" width="300">
+<img style="float: left; margin-right: 5px; margin-left: 5px" alt="" title="" src="IMG_0260.JPG" height="300" width="300">
 	
 <br>
 <div class=Story>This is Casey. My adventure with her began a day coming back from school. I noticed there was a poster with  
