--- a/MyStory.html
+++ b/MyStory.html
@@ -29,7 +29,7 @@
 
 
 <img style="float: left; margin-right: 5px; margin-left: 5px" alt="" title="" src="IMG_0260.JPG" height="300" width="300">
-<img style="float: left; margin-right: 5px; margin-left: 5px" alt="" title="" src="IMG_0245.JPG" height="300" width="300">	
+<img style="float: right; margin-right: 5px; margin-left: 5px" alt="" title="" src="IMG_0245.JPG" height="300" width="300">	
 <br>
 <div class=Story>This is Casey. My adventure with her began a day coming back from school. I noticed there was a poster with  
 	the words "Free Puppies." written in marker. After getting back home something inside of me said 'go back and  
@@ -55,8 +55,8 @@
 	Dogs are a man's bestfriend and without them the world would feel a little more emptier. Therefore I say give your dog a kiss, a hug, or even a treat  
 	because they bring so much love and energy to our routine lives.</div>
 <br>
-<img style="float: left; margin-right: 5px; margin-left: 5px" alt="" title="" src="IMG_0242.JPG" height="300" width="300">
-<img style="float: left; margin-right: 5px; margin-left: 5px" alt="" title="" src="IMG_0232.JPG" height="300" width="300">
+<img style="float: left; margin-right: 5px; margin-left: 5px" alt="" title="" src="IMG_0242.jpg" height="300" width="300">
+<img style="float: Right; margin-right: 5px; margin-left: 5px" alt="" title="" src="IMG_0232.JPG" height="300" width="300">
 <br>
 <p align="center">
 	<br>For any questions, comments, and/or concerns on this site please feel free to contact Harold Burgos via
