--- a/MyStory.html
+++ b/MyStory.html
@@ -55,7 +55,7 @@
 	Dogs are a man's bestfriend and without them the world would feel a little more emptier. Therefore I say give your dog a kiss, a hug, or even a treat  
 	because they bring so much love and energy to our routine lives.</div>
 <br>
-<img style="float: left; margin-right: 5px; margin-left: 5px" alt="" title="" src="IMG_0242.jpg" height="300" width="300">
+<img style="float: left; margin-right: 5px; margin-left: 5px" alt="" title="" src="IMG_0242.JPG" height="300" width="300">
 <img style="float: Right; margin-right: 5px; margin-left: 5px" alt="" title="" src="IMG_0232.JPG" height="300" width="300">
 <br>
 <br>
