--- a/MyStory.html
+++ b/MyStory.html
@@ -40,7 +40,10 @@
 	I knew that she was going to be very energetic and she sure was. I got in the habit of taking her on walks and over the next fews  
 	I had very few nights of constant 8 hours of sleep. I am not going to lie I was tired, but with every decision there are always  
 	consequences. As she grew older she got to be apart of the family and even got along with my sister's chihuahua.
-	Casey has brought a lot of love into my family, but also a lot of worries. One night after coming back from work I noticed Casey 
+	Casey has brought a lot of love into my family, but also a lot of worries. 
+<img style="float: left; margin-right: 5px; margin-left: 5px" alt="" title="" src="IMG_0260.JPG" height="300" width="300">
+<img style="float: right; margin-right: 5px; margin-left: 5px" alt="" title="" src="IMG_0245.JPG" height="300" width="300">
+	One night after coming back from work I noticed Casey 
 	was in the back yard behind our shed. As I called her name she didn't move. She stood there and stared at me. As I walked to her I knew  
 	Something was wrong. I noticed she balance on three legs and then also noticed her fourth leg was wobbling in the air. After having a difficult  
 	keeping her calm in the car and taking her to the emergency hospital. I could see the tears coming from her eyes. The same night  
