--- a/MyStory.html
+++ b/MyStory.html
@@ -28,11 +28,10 @@
 <br>
 
 
-<img style="float: left; margin-right: 5px; margin-left: 5px" alt="" title="" src="IMG_0260.JPG" height="300" width="300">
-<img style="float: right; margin-right: 5px; margin-left: 5px" alt="" title="" src="IMG_0245.JPG" height="300" width="300">	
 <br>
 <div class=Story>This is Casey. My adventure with her began a day coming back from school. I noticed there was a poster with  
 	the words "Free Puppies." written in marker. After getting back home something inside of me said 'go back and  
+	<img style="float: Right; margin-right: 5px; margin-left: 5px" alt="" title="" src="IMG_0242.JPG" height="300" width="300">
 	See what the puppies looked like.' As I drove there I knew I was in a good position to take a puppy home if I wanted too. 
 	It was when I walked to the circled fence that I fell in love with Casey. She was the weird one away from the other puppies,I thought she was unique.
 	After I brought her home I noticed she liked to wonder, she was curious on what was behind the doors and loved most of all,   
@@ -44,9 +43,10 @@
 <img style="float: left; margin-right: 5px; margin-left: 5px" alt="" title="" src="IMG_0260.JPG" height="300" width="300">
 	One night after coming back from work I noticed Casey 
 	was in the back yard behind our shed. As I called her name she didn't move. She stood there and stared at me. As I walked to her I knew  
-	<img style="float: right; margin-right: 5px; margin-left: 5px" alt="" title="" src="IMG_0245.JPG" height="300" width="300">
 	Something was wrong. I noticed she balance on three legs and then also noticed her fourth leg was wobbling in the air. After having a difficult  
 	keeping her calm in the car and taking her to the emergency hospital. I could see the tears coming from her eyes. The same night  
+	<img style="float: right; margin-right: 5px; margin-left: 5px" alt="" title="" src="IMG_0245.JPG" height="300" width="300">
+	
 	I check my security cameras to find out she had jumped off the tall table in our dock and landed bad.After many failed attempts  
 	from trying to put her hip back into place it always came out. Dr. Jones recommended to have surgury and so we proceeded. It was very  
 	difficult because she needed constant attention at night when she moved and also when she needed to potty. Never in my life did I ever  
@@ -56,10 +56,9 @@
 	a normal dog now. I am thankful things went well. I could not imagine the pain and siffering she must of went through. I learned that in life  
 	there are many ups and downs, but you always get through them day by day.  
 	Dogs are a man's bestfriend and without them the world would feel a little more emptier. Therefore I say give your dog a kiss, a hug, or even a treat  
-	because they bring so much love and energy to our routine lives.</div>
-<br>
-<img style="float: left; margin-right: 5px; margin-left: 5px" alt="" title="" src="IMG_0242.JPG" height="300" width="300">
-<img style="float: Right; margin-right: 5px; margin-left: 5px" alt="" title="" src="IMG_0232.JPG" height="300" width="300">
+	because they bring so much love and energy to our routine lives.
+<img style="float: Left; margin-right: 5px; margin-left: 5px" alt="" title="" src="IMG_0232.JPG" height="300" width="300">
+	</div>
 <br>
 <br>
 <br>
