--- a/MyStory.html
+++ b/MyStory.html
@@ -36,7 +36,7 @@
 	I had very few nights of constant 8 hours of sleep. I am not going to lie I was tired, but with every decision there are always  
 	consequences. As she grew older she got to be apart of the family and even got along with my sister's chihuahua.
 	Casey has brought a lot of love into my family, but also a lot of worries. 
-<img style="float: right; margin-right: 5px; margin-left: 5px" alt="" title="" src="IMG_0245.JPG" height="300" width="300">
+<img style="float: Left; margin-right: 5px; margin-left: 5px" alt="" title="" src="IMG_0245.JPG" height="300" width="300">
 	One night after coming back from work I noticed Casey 
 	was in the back yard behind our shed. As I called her name she didn't move. She stood there and stared at me. As I walked to her I knew  
 	Something was wrong. I noticed she balance on three legs and then also noticed her fourth leg was wobbling in the air. After having a difficult  
@@ -45,7 +45,7 @@
 	from trying to put her hip back into place it always came out. Dr. Jones recommended to have surgury and so we proceeded. It was very  
 	difficult because she needed constant attention at night when she moved and also when she needed to potty. Never in my life did I ever  
 	feel so much like in a father's role until that time. Even with the surgery the doctor feared that she could never put pressure on her foot  
-<img style="float: Left; margin-right: 5px; margin-left: 5px" alt="" title="" src="IMG_0242.jpg" height="300" width="300">
+<img style="float: Right; margin-right: 5px; margin-left: 5px" alt="" title="" src="IMG_0242.jpg" height="300" width="300">
 	because of all of the muscle she had lost during the time of the accident till the surguery. Finally Casey was a fighter and after 3 months  
 	she began to walk and adding a little more pressure and confidenced to her leg. Its been a year since her recovery and she runs and plays like  
 	a normal dog now. I am thankful things went well. I could not imagine the pain and siffering she must of went through. I learned that in life  
