--- a/MyStory.html
+++ b/MyStory.html
@@ -53,6 +53,11 @@
 	Dogs are a man's bestfriend and without them the world would feel a little more emptier. Therefore I say give your dog a kiss, a hug, or even a treat  
 	because they bring so much love and energy to our routine lives.
 <img style="float: left; margin-right: 5px; margin-left: 5px" alt="" title="" src="IMG_0260.JPG" height="300" width="300">
+	<p align="center">
+	<br>For any questions, comments, and/or concerns on this site please feel free to contact Harold Burgos via
+	<a href="mailto:haroldjburgos@gmail.com?
+	Subject=Dogs%20And%20Puppies%20HTML" target="_top">Email</a>
+	</p>
 	</div>
 <br>
 <br>
