--- a/DogsAndPupsHome.html
+++ b/DogsAndPupsHome.html
@@ -20,7 +20,7 @@
         <li><a href="https://haroldburgos.github.io/CSISProjects/AmIReady.html">Am I Ready</a></li>
         <li><a href="https://haroldburgos.github.io/CSISProjects/FAQs.html">FAQs</a></li>
         <li><a href="https://haroldburgos.github.io/CSISProjects/MyStory.html">My Story</a></li>
-	<li><a href="https://haroldburgos.github.io/CSISProjects/ContactUs.html">Contact US</a></li>    
+	<li><a href="https://haroldburgos.github.io/CSISProjects/ContactUs.html">Contact Us</a></li>    
     </ul>
 </div> 
 
