--- a/DogServices.html
+++ b/DogServices.html
@@ -17,8 +17,9 @@
         <li><a class="active" href="https://haroldburgos.github.io/CSISProjects/DogsAndPupsHome.html">Home</a></li>
         <li><a href="https://haroldburgos.github.io/CSISProjects/DogServices.html">Dog Services</a></li>
         <li><a href="https://haroldburgos.github.io/CSISProjects/AmIReady.html">Am I Ready</a></li>
-        <li><a href="https://haroldburgos.github.io/CSISProjects/FAQs.html">FAQS</a></li>
+        <li><a href="https://haroldburgos.github.io/CSISProjects/FAQs.html">FAQs</a></li>
         <li><a href="https://haroldburgos.github.io/CSISProjects/MyStory.html">My Story</a></li>
+	<li><a href="https://haroldburgos.github.io/CSISProjects/ContactUs.html">Contact Us</a></li>    
     </ul>
 </div> 
 	
