--- a/ContactUs.html
+++ b/ContactUs.html
@@ -11,6 +11,18 @@
 </head>
 
 <body>
+	
+<div class="NavButtons" id="header">
+    <ul>
+        <li><a class="active" href="https://haroldburgos.github.io/CSISProjects/DogsAndPupsHome.html">Home</a></li>
+        <li><a href="https://haroldburgos.github.io/CSISProjects/DogServices.html">Dog Services</a></li>
+        <li><a href="https://haroldburgos.github.io/CSISProjects/AmIReady.html">Am I Ready</a></li>
+        <li><a href="https://haroldburgos.github.io/CSISProjects/FAQs.html">FAQs</a></li>
+        <li><a href="https://haroldburgos.github.io/CSISProjects/MyStory.html">My Story</a></li>
+	<li><a href="https://haroldburgos.github.io/CSISProjects/ContactUs.html">Contact Us</a></li>    
+    </ul>
+</div> 
+	
 <h1 align="center">Contact Us</h1>
 
 
