--- a/FAQs.html
+++ b/FAQs.html
@@ -20,9 +20,9 @@
         <li><a href="https://haroldburgos.github.io/CSISProjects/AmIReady.html">Am I Ready</a></li>
         <li><a href="https://haroldburgos.github.io/CSISProjects/FAQs.html">FAQs</a></li>
         <li><a href="https://haroldburgos.github.io/CSISProjects/MyStory.html">My Story</a></li>
+	<li><a href="https://haroldburgos.github.io/CSISProjects/ContactUs.html">Contact Us</a></li>    
     </ul>
 </div> 
-
 	
 <h1 align="center">Top 5 FAQs</h1>
 <br>
