--- a/ContactUs.html
+++ b/ContactUs.html
@@ -49,7 +49,7 @@ function ValidateEmail(inputText)
   Email:<br>
   <input type="text"  name="Email" id="Email1"><br>
   Comments:<br>
-  <input type="text"  name="Comments" id="Cpmments"><br>
+  <textarea name="Comments" id="Comments" rows="4" cols="100"></textarea>
 <br>
   <input type="submit" value="Send Now" onclick="ValidateEmail(document.form1.Email1)"/>
   <input type="reset" value="Reset">
