--- a/ContactUs.html
+++ b/ContactUs.html
@@ -43,7 +43,7 @@ function ValidateEmail(inputText)
 	
 <h1 align="center">Contact Us</h1>
 
-<form name="form1" action="http://www.markmurtha.com/csis128/readform.asp">
+<form name="form1" action="welcome.php" method="post">
   Name:<br>
   <input type="text" name="Name" id="Name"> <br>
   Email:<br>
@@ -55,7 +55,6 @@ function ValidateEmail(inputText)
   <input type="reset" value="Reset">
 </form>
 
-<img src="Tips&Tricks.jpg" alt="Tips&Tricks">	
 <br>
 	
 <br>
