--- a/ContactUs.html
+++ b/ContactUs.html
@@ -43,7 +43,7 @@ function ValidateEmail(inputText)
 	
 <h1 align="center">Contact Us</h1>
 
-<form name="form1" action="welcome.php" method="post">
+<form name="form1" action="welcome_get.php" method="post">
   Name:<br>
   <input type="text" name="Name" id="Name"> <br>
   Email:<br>
