--- a/Welcome_get.html
+++ b/Welcome_get.html
@@ -1,9 +1,19 @@
-<html>
+<!DOCTYPE html>
+
+<html lang="en">
+
+<head>
+	<link rel="stylesheet" type="text/css" href="Welcome_get.css">
+	<title>Dogs And Puppies</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+</head>
 <body>
 
-Hi <?php echo $_GET["Name"]; ?><br>
+Hi,<?php echo $_GET["Name"]; ?><br>
 Thank you for your Message.<br>
 Also thank you for making our dog community a better community.<br>
 
 </body>
-</html>
+   </html>
+  
