--- a/Welcome_get.html
+++ b/Welcome_get.html
@@ -9,10 +9,35 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
 <body>
+	
+	
+<div class="NavButtons" id="header">
+    <ul>
+        <li><a class="active" href="https://haroldburgos.github.io/CSISProjects/DogsAndPupsHome.html">Home</a></li>
+        <li><a href="https://haroldburgos.github.io/CSISProjects/DogServices.html">Dog Services</a></li>
+        <li><a href="https://haroldburgos.github.io/CSISProjects/AmIReady.html">Am I Ready</a></li>
+        <li><a href="https://haroldburgos.github.io/CSISProjects/FAQs.html">FAQs</a></li>
+        <li><a href="https://haroldburgos.github.io/CSISProjects/MyStory.html">My Story</a></li>
+	<li><a href="https://haroldburgos.github.io/CSISProjects/ContactUs.html">Contact Us</a></li>    
+    </ul>
+</div> 
+	
+<h1 align="center">Contact Us</h1>
 
+<p align="center">
 Hi,<?php echo $_GET["Name"]; ?><br>
 Thank you for your Message.<br>
 Also thank you for making our dog community a better community.<br>
+	</p>
+<br>
+	
+<br>
+
+<p align="center">
+	<br>For any questions, comments, and/or concerns on this site please feel free to contact Harold Burgos via
+	<a href="mailto:haroldjburgos@gmail.com?
+	Subject=Dogs%20And%20Puppies%20HTML" target="_top">Email</a>
+</p>
 
 </body>
    </html>
