--- a/ContactUs.html
+++ b/ContactUs.html
@@ -54,6 +54,9 @@ function ValidateEmail(inputText)
   <input type="submit" value="Send Now" onclick="ValidateEmail(document.form1.Email1)"/>
   <input type="reset" value="Reset">
 </form>
+	<form action="http://google.com">
+    <input type="submit" value="Send Now" />
+</form>
 
 <br>
 	
