--- a/ContactUs.html
+++ b/ContactUs.html
@@ -43,7 +43,7 @@ function ValidateEmail(inputText)
 	
 <h1 align="center">Contact Us</h1>
 
-<form name="form1" action="https://haroldburgos.github.io/CSISProjects/Welcome_get.html">
+<form name="form1" action="http://google.com">
   Name:<br>
   <input type="text" name="Name" id="Name"> <br>
   Email:<br>
@@ -53,9 +53,6 @@ function ValidateEmail(inputText)
 <br>
   <input type="submit" value="Send Now" onclick="ValidateEmail(document.form1.Email1)"/>
   <input type="reset" value="Reset">
-</form>
-	<form action="http://google.com">
-    <input type="submit" value="Send Now" />
 </form>
 
 <br>
