--- a/DogsAndPupsHome.html
+++ b/DogsAndPupsHome.html
@@ -25,9 +25,11 @@
 </div> 
 
 	
-<h1 align="center">Dogs And Puppies</h1>
+<h1 align="center">Welcome to the Dogs And Puppies</h1>
 
 <img src="Adopt_Us.jpg" alt="AdoptMe">	
+	
+<h2> This website offer Dog facility reviews, Puppy decision making, and FAQs. </h2>
 
 <br>
 
