--- a/DogsAndPupsHome.html
+++ b/DogsAndPupsHome.html
@@ -29,7 +29,7 @@
 
 <img src="Adopt_Us.jpg" alt="AdoptMe">	
 	
-<h2> This website offer Dog facility reviews, Puppy decision making, and FAQs. </h2>
+<h2 align="center"> This website offer Dog facility reviews, Puppy decision making, and FAQs. </h2>
 
 <br>
 
