--- a/DogsAndPupsHome.html
+++ b/DogsAndPupsHome.html
@@ -26,9 +26,9 @@
 
 	
 <h1 align="center">Welcome to the Dogs And Puppies</h1>
-<h2 align="center"> This website offer Dog facility reviews, Puppy decision making, and FAQs. </h2>
 
 <img src="Adopt_Us.jpg" alt="AdoptMe">	
+<h2 align="center"> This website offers Great Dog facility reviews and recommendations, Puppy decision making, and FAQs about dogs. </h2>
 	
 
 <br>
